k02/deployment-canary-stable.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
    track: stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
        track: stable
    spec:
      containers:
      - name: php-redis
        image: gcr.io/google-samples/gb-frontend:v3
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
