k02/deployment-canary.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend-canary
  labels:
    app: guestbook
    tier: frontend
    track: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
      track: canary
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
        track: canary
    spec:
      containers:
      - name: php-redis
        image: gcr.io/google-samples/gb-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
