k02/limits-valid-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: valid-pod
  namespace: limits
  labels:
    name: valid-pod
spec:
  containers:
  - name: kubernetes-serve-hostname
    image: gcr.io/google_containers/serve_hostname
    resources:
      limits:
        cpu: "1"
        memory: 512Mi
