k02/external-service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-external-service
spec:
  ports:
    -
      name: "mysql"
      protocol: "TCP"
      port: 3306
      targetPort: 3306
      nodePort: 0
  # selector must be blank for external services 
  selector: {}

---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: "example-external-service" 
subsets: 
- addresses:
  - ip: "10.10.1.1"
  ports:
  - name: "mysql"
    port: 3306
