k02/frontend-service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: support
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: webapp
    role: frontend
  type: NodePort
