k02/petset-with-headless-service-example.yaml
# A headless service to create DNS records
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    name: web
  # *.nginx.default.svc.cluster.local
  # DNS managed by the PetSet API, not the normal Service API
  clusterIP: None
  selector:
    app: nginx
