k02/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: gb-frontend
  labels:
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: guestbook
    tier: frontend
  type: ClusterIP
